<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiant"
    tools:context=".quotes_app_demo.QuotesMainActivity">

    <TextView
        android:id="@+id/QuotesAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/quotes"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/quotesCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20ssp"
        app:cardCornerRadius="@dimen/_20ssp"
        app:cardElevation="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:scaleX="-1"
                android:scaleY="-1"
                android:src="@drawable/ic_baseline_format_quote_24"
                app:tint="#454545"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/quoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/genius_is_one_percent_inspiration_and_ninety_nine_percent_perspiration"
                android:textColor="#454545"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quoteAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/bruce_wayne"
                android:textColor="#454545"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:drawablePadding="@dimen/_2sdp"
        android:text="@string/previous"
        android:textAllCaps="true"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:drawablePadding="@dimen/_2sdp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>